# C-Data_Structures

./: .gitignore  CMakeLists.txt  README.md
00_Project/: ColaAtencion.cpp  ListaMenu.cpp  PilaPedido.cpp
01_Estructuras_Arreglos/practicas/: 01_arregloDinamico_notasPromedio.cpp  02_arregoPunteros_nombresEdades.cpp  pila_Pares.cpp
01_Estructuras_Arreglos/tareas/: A1-E1_inventarioProductos.cpp  A1-E2_registroDePacientes.cpp  T2-reporteCalificaciones.cpp
02_Listas_pilas_Colas/practicas/: CO_BancoAtencion.cpp  CO_ImpresionDocumentos.cpp  CO_SistemaAtencion.cpp  CO_SistemaPedidos.cpp  CO_SistemaTurnos.cpp  LE_EliminarDuplicados.cpp  LE_EliminarNodos.cpp  LE_EliminarPares.cpp  LE_EliminarPrimos.cpp  LE_InvertirNodos.cpp  PI_EliminarDuplicados.cpp  PI_PilaEnteros.cpp  PI_PilaParesSeparados.cpp  PI_pilaCaracteres.cpp
02_Listas_pilas_Colas/tareas/: listas_dobles_enlazadas.cpp
03_Arboles_Grafos/practicas/: Grafos_RedSocial.cpp
03_Arboles_Grafos/tareas/: Ejercicio_Recorrido_Arbol.cpp
